# lvgl-template-web

./: .gitmodules  CMakeLists.txt  README.md  lvgl-template-web.eez-project  main.c  ui.eez-project
src/ui/: eez-flow.h  flow_def.cpp  flow_def.h  screens.c  screens.h  ui.c  ui.h  ui_image_log_eez.c  ui_image_logo_lvgl.c
template/: manifest.json  post.js
